# kolite

./: .gitignore  README.md  compose.yaml  test.js  test.py
FrontEnd/: index.html  package-lock.json  package.json
FrontEnd/data/: brands.json  models.json
FrontEnd/src/: App.jsx  cars.json  store.js
FrontEnd/src/hooks/: useMoveBack.js  useOpenModal.js
FrontEnd/src/pages/: AddNew.jsx  Contacts.jsx  Home.jsx  PageNotFound.jsx
FrontEnd/src/services/: apiAuth.js  apiCars.js  getCars.js
FrontEnd/src/slices/: LoginRegisterSlice.js  LoginSlice.js  ModalSlice.js  RegisterSlice.js  SearchButtonsSlice.js
FrontEnd/src/styles/: GlobalStyles.js  Systems.txt  mediaQueries.js
backend/: Cargo.toml  Makefile  test_cleanup.sh
backend/database/: Cargo.toml
backend/database/src/: auth.rs  collections.rs  connection.rs  crud.rs  errors.rs  handler.rs  lib.rs  tests.rs
backend/database/src/tests/: mod.rs  test_base_database_handler_functionalities.rs  test_collection_handler.rs  test_connection.rs  test_crud.rs  test_database_auth.rs  utils.rs
backend/src/: errors.rs  main.rs  state.rs
backend/src/auth/: authenticator.rs  claims.rs  errors.rs  mod.rs  refresh.rs
backend/src/auth/tests/: test_jwt.rs
backend/src/cars/: mod.rs  specs.rs
backend/src/cars/api/: routes.rs  schemas.rs
backend/src/database/: connection.rs  crud.rs  error.rs  mod.rs  query.rs  tests.rs
backend/src/db_operations/: cruder.rs  mod.rs  savable.rs
backend/src/db_operations/tests/: mod.rs  test_cruder.rs
backend/src/users/: crud.rs  hasher.rs  mod.rs  model.rs  tests.rs
backend/src/users/api/: mod.rs  routes.rs  schemas.rs
backend/src/users/api/tests/: mod.rs  test_endpoints.rs
backend/src/users/tests/: mod.rs  test_passwords.rs  test_serialization.rs  test_user_model.rs
docker/: backend.Dockerfile
(+30 files in other folders)
