[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1"
serde_json = "1"
jsonwebtoken = "9"
dotenv = "0.15"

[dev-dependencies]
mockall = "0.12"
cargo-llvm-cov = "0.6.6"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
