[workspace]
members = [
	"database",
]

[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
dotenv = "0.15"
argon2 = "0.5"
rand = "0.8"
database = { path = "./database" }
hex = "0.4.3"
cargo = "0.78.0"
tokio = "1.36.0"

[dev-dependencies]
mockall = "0.12"
cargo-llvm-cov = "0.6.6"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]

[dependencies.uuid]
version = "1.7"
features = [
	"v7",
	"serde"
]
