[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockall = "0.12"
cargo-llvm-cov = "0.6.6"


[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
